; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_ubsan.c___ubsan_handle_dynamic_type_cache_miss_abort.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_ubsan.c___ubsan_handle_dynamic_type_cache_miss_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CDynamicTypeCacheMissData = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__ubsan_handle_dynamic_type_cache_miss_abort(%struct.CDynamicTypeCacheMissData* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.CDynamicTypeCacheMissData*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.CDynamicTypeCacheMissData* %0, %struct.CDynamicTypeCacheMissData** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.CDynamicTypeCacheMissData*, %struct.CDynamicTypeCacheMissData** %4, align 8
  %8 = call i32 @ASSERT(%struct.CDynamicTypeCacheMissData* %7)
  %9 = load %struct.CDynamicTypeCacheMissData*, %struct.CDynamicTypeCacheMissData** %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = call i32 @HandleDynamicTypeCacheMiss(i32 0, %struct.CDynamicTypeCacheMissData* %9, i64 %10, i64 %11)
  ret void
}

declare dso_local i32 @ASSERT(%struct.CDynamicTypeCacheMissData*) #1

declare dso_local i32 @HandleDynamicTypeCacheMiss(i32, %struct.CDynamicTypeCacheMissData*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
